added editing guide

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: SMS Guide
 remote_theme: pmarsceill/just-the-docs
 color_scheme: dark
 markdown: kramdown
+kramdown:
+  parse_block_html: true
