--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SMS Guide
-remote_theme: just-the-docs/just-the-docs@v0.4.0.rc3
+remote_theme: just-the-docs/just-the-docs@v0.10.1
 color_scheme: dark
 markdown: kramdown
 kramdown:
